src/styles/base/_variables.scss
:root {
  --sp: 1.25rem;
  --sp-xs: 0.625rem;
  --sp-s: 1rem;
  --sp-m: 1.625em;
  --sp-l: 2rem;
  --sp-xl: 10rem;
  --sp-content: var(--sp);

  --header-height: 3.75rem;
  --navigation-width: 15rem;
  --toc-width: 14rem;
  --content-max-width: 62ch;
  --layout-max-width: 70rem;
  --title-max-size: 50rem;
  --radius: 0.25rem;

  --transition: 130ms ease-in;
  --transition-button: 130ms cubic-bezier(0.55, 0.09, 0.68, 0.53);
  --transition-navi: 250ms cubic-bezier(1, 0, 0, 1);
  --transition-theme: 100ms ease-out;

  --clr-mix-modifier: hsl(0 0% 0%);

  --clr-bg: hsl(204, 15%, 94%);
  --clr-bg-card: hsl(0, 0%, 100%);
  --clr-bg-table-odd: hsl(0, 0%, 98%);
  --clr-bg-table-odd: rgb(0 0 0 / 0.03);

  --clr-bg-table-ws: hsl(141.7, 76.6%, 73.1%);
  --clr-bg-table-symb: hsl(200.60000000000002, 94.4%, 86.1%);

  --clr-line: color-mix(
    in oklab,
    var(--clr-bg) 15%,
    var(--clr-mix-modifier) 15%
  );
  --clr-table-line: color-mix(
    in oklab,
    var(--clr-bg) 15%,
    var(--clr-mix-modifier) 15%
  );

  --clr-bg-nav: var(--clr-bg-card);

  --clr-shade: #cfd8dc;
  --clr-text: rgb(15, 23, 42);
  --clr-text-light: rgba(15, 23, 42, 0.7);
  --clr-text--code: #1976d2;
  --clr-inverse: hsl(0, 0%, 100%);
  --clr-section: hsl(0 0% 100% / 0.5);
  --clr-header: rgba(6, 13, 18, 0.8);
  --clr-marker: hsl(60 100% 70% / 1);
  --clr-code-title: #94a3b8;

  --clr-type-text: #fff;
  --clr-type-article: #334155;
  --clr-type-game: #166534;
  --clr-type-tool: #991b1b;

  --clr-warning: #b91c1c;
  --clr-success: #1f9d55;
  --clr-primary: #004fcd;
  --clr-primary-hover: hsl(217 100% 40% / 0.3);
  --clr-primary-light: hsl(217 100% 40% / 0.7);
  --clr-selection: rgb(0 79 205 / 0.15);

  --clr-nav-shadow: rgba(109, 62, 62, 0.2);

  --clr-kb-bg: transparent;
  --clr-kb-text: var(--clr-text);
  --clr-kb-border: #b4b4b4;
  --clr-kb-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
    0 2px 0 0 rgba(255, 255, 255, 0.7) inset;

  --icon-size: 1.5rem;
  --icon-size-header: 1.25rem;

  // Font Families
  --ff: 'Open Sans Variable', sans-serif;
  --ff-headings: 'Domine Variable', sans-serif;
  --ff-code: 'JetBrains Mono Variable', monospace;

  // Font Weights
  --fw: 350;
  --fw-bold: 500;
  --fw-headings: 700;

  // Font Variation Settings
  --fvs: 'wght': var(--fw), 'ital': 0;
  --fvs-bold: 'wght': var(--fw-bold), 'ital': 0;
  --fvs-headings: 'wght': var(--fw-headings), 'ital': 0;

  // Font Sizes
  --fs: 1rem;
  --fs-s: 0.9375rem;
  --fs-xs: 0.75rem;
  --fs-l: 1.25rem;

  // Line Heights
  --lh: 1.5;
  --lh-s: 1.3;

  --footer-bg: linear-gradient(
    to bottom,
    rgba(255, 255, 255, 1) 1px,
    rgba(255, 255, 255, 0.2) 2px,
    rgba(255, 255, 255, 0)
  );

  --image-padding: 1rem;
  --image-shadow: 0 0.25rem 0.75rem -0.5rem rgb(10 52 120 / 30%);

  @media (min-width: 37.5em) {
    --sp-content: 2.5rem;
    --sp-l: 3rem;
  }

  @media (min-width: 57.5em) {
    --sp-l: 4rem;
  }

  &[data-theme='light'] {
    color-scheme: light;
  }

  &[data-theme='dark'] {
    color-scheme: dark;

    --clr-mix-modifier: hsl(0 0% 100%);

    --clr-bg: hsl(240, 55%, 7%);
    --clr-bg-card: color-mix(
      in oklab,
      var(--clr-bg),
      var(--clr-mix-modifier) 10%
    );
    --clr-bg-table-odd: rgb(0 0 0 / 0.08);

    --clr-line: color-mix(in oklab, var(--clr-bg), var(--clr-mix-modifier) 22%);
    --clr-table-line: color-mix(
      in oklab,
      var(--clr-bg),
      var(--clr-mix-modifier) 16%
    );

    --clr-text: #d9d9d9;
    --clr-text-light: rgba(217, 217, 217, 0.7);
    --clr-header: rgba(20, 35, 45, 0.8);
    --clr-inverse: rgb(255 255 255 / 1);

    --clr-primary: #2f81f7;
    --clr-marker: hsl(60 100% 70% / 0.2);

    --clr-nav-shadow: rgb(255 2555 255 / 0.2);

    --clr-kb-bg: rgb(255 255 255 / 0.05);
    --clr-kb-text: var(--clr-text);
    --clr-kb-border: rgb(255 255 255 / 0.3);
    --clr-kb-shadow: 0 1px 1px rgba(255, 255, 255, 0.2),
      0 2px 0 0 rgba(255, 255, 255, 0.1) inset;

    --footer-bg: linear-gradient(
      to bottom,
      rgba(255, 255, 255, 0) 1px,
      rgba(255, 255, 255, 0.1) 2px,
      rgba(255, 255, 255, 0)
    );
  }
}

